<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1510230919221458</string>
    <string name="app_name">Poppit</string>
    <string name="parse_app">ZeGVmOSHdb3pfNVAzjJj27iWcjuBReZMMXuCfe0z</string>
    <string name="parse_client">kzGsQlCbW66MMK1feRojiW860YfHBr2hvk8VqY9o</string>
    <string name="user_data">user_data_file</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="pop_text">Ask a yes / no question:</string>
    <string name="popit">Poppit!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="title_activity_main">Poppit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Poppit</string>
    <string name="title_activity_login">Login to Poppit!</string>
    <string name="title_activity_group_editor">GroupEditor</string>
    <string name="title_activity_question_display">QuestionDisplay</string>
    <string name="username_filler">Username</string>
    <string name="ask_hint">what would you ask?</string>
    <string name="recipients_hint">Who would you like to ask that?</string>
    <string name="friends_search_hint">Type in your friends names</string>
    <string name="inflate_text">INFLATE</string>
    <string name="question_filler">Question content</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="time_filler">unknown time</string>
    <string name="friends_text">friends</string>
    <string name="your_answer_text">You said</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_friends_selector">FriendsSelector</string>
    <string name="title_activity_user_questions">UserQuestions</string>
    <string name="title_activity_user_group_display">UserGroupDisplay</string>
    <string name="yes_no">Yes/No</string>
    <string name="custom">Custom</string>
    <string name="image">Image</string>

</resources>
